# sequential

./: .amccmake.conf  .gitignore  .syntastic  .syntastic_c  CMakeLists.txt  Makefile  README.md  README.rst  sequential.h
seq/: seq-api.c  seq-api.h  seq-array.c  seq-error.c  seq-list.c  seq-map.c  seq-queue.c  seq-ring.c  seq-stack.c  seq-test.c
src/: sequential.c  sequential.h
src/seq/: seq-api.c  seq-api.h  seq-list.c  seq-map.c
src/test/: test.c  test.h
test/: seq-test-string.c  seq-test.c  seq-test.h  seq-tmp.c  test-main.c  test.c  test.h
