PROJECT(sequential)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
SET(SEQUENTIAL_STATIC TRUE CACHE BOOL "Enable static build of Sequential.")

SET(SEQUENTIAL_SOURCE_FILES
	"src/sequential.c"
)

SET(SEQUENTIAL_HEADER_FILES
	"src/sequential.h"
)

INCLUDE_DIRECTORIES(src)

SOURCE_GROUP("Header Files" FILES ${SEQUENTIAL_HEADER_FILES})
SOURCE_GROUP("Source Files" FILES ${SEQUENTIAL_SOURCE_FILES})

SET(SEQUENTIAL_LIBRARY_TYPE SHARED)

IF(SEQUENTIAL_STATIC)
	SET(SEQUENTIAL_LIBRARY_TYPE STATIC)
ENDIF()

ADD_LIBRARY(sequential ${SEQUENTIAL_LIBRARY_TYPE}
	${SEQUENTIAL_HEADER_FILES}
	${SEQUENTIAL_SOURCE_FILES}
)

ADD_EXECUTABLE(seq-test
	"src/test/test.h"
	"src/test/test.c"
)

TARGET_LINK_LIBRARIES(seq-test sequential)

